--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "clementbouly <clementbouly@hotmail.fr>",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
+    "host": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
